--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,17 +1,16 @@
 name-template: 'v$RESOLVED_VERSION'
 tag-template: 'v$RESOLVED_VERSION'
 categories:
-  - title: '🚀 Features'
+  - title: '🚀 New Features'
     labels:
-      - 'feature'
       - 'enhancement'
   - title: '🐛 Bug Fixes'
     labels:
       - 'bug'
-  - title: '🧰 Maintenance'
+  - title: '🧰 Maintenance & Docs'
     labels:
-      - 'chore'
       - 'documentation'
+      - 'maintenance'
 version-resolver:
   major:
     labels:
