--- a/custom_components/hyxi_cloud/manifest.json
+++ b/custom_components/hyxi_cloud/manifest.json
@@ -6,6 +6,6 @@
   "documentation": "https://github.com/Veldkornet/ha-hyxi-cloud",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Veldkornet/ha-hyxi-cloud/issues",
-  "requirements": ["requests>=2.31.0"],
-  "version": "1.0.7"
+  "requirements": ["aiohttp>=3.9.0"],
+  "version": "1.0.8"
 }
