--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -15,6 +15,8 @@ documentation:
 
 # Label as 'maintenance' for internal GitHub actions, versions, or metadata
 maintenance:
+- author: 
+    - "dependabot[bot]"
 - changed-files:
   - any-glob-to-any-file:
     - ".github/**/*"
