--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,4 +1,4 @@
-name: Validate Integration
+name: HomeAssistant
 
 on:
   push:
@@ -23,7 +23,3 @@ jobs:
         uses: hacs/action@main
         with:
           category: integration
-      - name: 🏆 Integration Quality Scale
-        uses: home-assistant/actions/helpers/check-quality-scale@master
-        with:
-          integration: hyxi_cloud
