Add binary sensor for cloud connectivity status

--- a/custom_components/hyxi_cloud/manifest.json
+++ b/custom_components/hyxi_cloud/manifest.json
@@ -6,6 +6,7 @@
   "documentation": "https://github.com/Veldkornet/ha-hyxi-cloud",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Veldkornet/ha-hyxi-cloud/issues",
+  "loggers": ["custom_components.hyxi_cloud"],
   "requirements": ["aiohttp>=3.9.0"],
   "version": "1.0.9"
 }
