Local dev env config (#29)
* Local dev env config

* Maintenance

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -14,11 +14,9 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      # 1. We must check out the code first so we can read the file
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Extract the version from manifest.json
       - name: Get version from manifest.json
         id: get_version
         run: |
@@ -26,8 +24,7 @@ jobs:
           echo "Extracted version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      # 3. Pass the extracted version to Release Drafter
-      - name: Run Release Drafter
+      - name: Update Release Draft
         uses: release-drafter/release-drafter@v6.2.0
         with:
           version: ${{ steps.get_version.outputs.version }}
