--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -68,7 +68,12 @@
             "options": {
                 "cwd": "${workspaceFolder}/dev_env"
             },
-            "problemMatcher": []
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "always",
+                "focus": true,
+                "panel": "dedicated"
+            }
         }
     ]
 }
