--- a/custom_components/hyxi_cloud/manifest.json
+++ b/custom_components/hyxi_cloud/manifest.json
@@ -1,12 +1,18 @@
 {
   "domain": "hyxi_cloud",
   "name": "HYXi Cloud",
-  "codeowners": ["@Veldkornet"],
+  "codeowners": [
+    "@Veldkornet"
+  ],
   "config_flow": true,
   "documentation": "https://github.com/Veldkornet/ha-hyxi-cloud",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Veldkornet/ha-hyxi-cloud/issues",
-  "loggers": ["custom_components.hyxi_cloud"],
-  "requirements": ["aiohttp>=3.9.0"],
-  "version": "1.2.2"
+  "loggers": [
+    "custom_components.hyxi_cloud"
+  ],
+  "requirements": [
+    "aiohttp>=3.9.0"
+  ],
+  "version": "1.2.3"
 }
