Update security.yml to include permissions
Added permissions for security checks and reporting.

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -7,7 +7,10 @@ on:
     branches: [main]
   schedule:
     - cron: '30 4 * * 1' # Runs every Monday at 4:30 AM to catch new vulnerabilities
-
+permissions:
+  contents: read       # Required to check out code
+  security-events: write # Required for Bandit/CodeQL to report to the Security tab
+  pull-requests: write   # Optional: Only if you want comments in your PR
 jobs:
   # 🛡️ 1. Harden Runner: Blocks exfiltration of your secrets
   # 🔒 2. Gitleaks: Scans for leaked API keys/serial numbers
@@ -46,6 +49,8 @@ jobs:
     name: Dependency Review
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
