--- a/.github/workflows/sync-manifest.yml
+++ b/.github/workflows/sync-manifest.yml
@@ -13,12 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Update manifest.json to match Release Tag
+      - name: Update manifest version
         run: |
-          # Get the tag name (e.g., 2026.3.2)
-          TAG_NAME="${{ github.event.release.tag_name }}"
+          # Get the tag name (e.g., v1.2.6)
+          TAG_NAME="${{ github.ref_name }}"
           
-          # Strip 'v' if it exists (e.g., v2026.3.2 -> 2026.3.2)
+          # Strip 'v' if it exists
           CLEAN_VER=$(echo $TAG_NAME | sed 's/^v//')
           
           # Update the manifest
@@ -29,4 +29,6 @@ jobs:
           git config user.email "actions@github.com"
           git add custom_components/hyxi_cloud/manifest.json
           git commit -m "chore: sync manifest to $CLEAN_VER [skip ci]"
-          git push origin main
+          
+          # Push the detached HEAD to the remote main branch
+          git push origin HEAD:main
