Update release drafter configuration

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -69,3 +69,5 @@ version-resolver:
       - "chore"
       - "dependencies"
   default: patch
+replace-contributors:
+  'dependabot[bot]': '@dependabot[bot]'
