Revert "Update release drafter configuration to exclude bots (#74)"
This reverts commit fb5d1b613f8e3d8342c19d0ab3c87e4e71edb9b4.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -69,7 +69,5 @@ version-resolver:
       - "chore"
       - "dependencies"
   default: patch
-exclude-contributors:
-  - 'dependabot[bot]'
-  - 'dependabot-preview[bot]'
-  - 'github-actions[bot]'
+replace-contributors:
+  'dependabot[bot]': '@dependabot[bot]'
